--- a/basic.html
+++ b/basic.html
@@ -1,9 +1,11 @@
-<!DOCKTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <title></title>
   </head>
   <body>
-    
+
     <script src="javascript.js" charset="utf-8"></script>
 
   </body>
